Fix z-index on other menu conflict with ngselet

--- a/client/app/nav/nav.component.css
+++ b/client/app/nav/nav.component.css
@@ -214,7 +214,7 @@
   padding: 5px;
   width: 150px;
   background-color: var(--nav-background-main);
-  z-index: 20;
+  z-index: 1100;
   text-align: left;
 }
 
